efeito carrossel com indicator

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <section class="pai">
             <div class="filho">
                 <img id="img" src="./img/carro-01.jpg" alt="">
+                <img id="indicator" src="./assets/indicator-01.svg" alt="">
                 <button id="button">&rightarrow;</button>
             </div>
         </section>
