--- a/index.html
+++ b/index.html
@@ -10,12 +10,32 @@
 <body>
     <main>
         <h1>Aprendendo o Efeito carrosel</h1>
+        <h2>Efeito 01</h2>
         <section class="pai">
             <div class="filho">
                 <img id="img" src="./img/carro-01.jpg" alt="">
                 <img id="indicator" src="./assets/indicator-01.svg" alt="">
                 <button id="button">&rightarrow;</button>
             </div>
+        </section>
+
+        <h2>Efeito 02</h2>
+        <section id="efect-02">
+            <div id="one">
+                <img src="./img/carro-03.jpg" alt="">
+                <img id="indicator" src="./assets/indicator-03.svg" alt="">
+            </div>
+            <div id="two">
+                <img src="./img/carro-02.jpg" alt="">
+                <img id="indicator" src="./assets/indicator-02.svg" alt="">
+            </div>
+            <div id="three">
+                <img src="./img/carro-01.jpg" alt="">
+                <img id="indicator" src="./assets/indicator-01.svg" alt="">
+            </div>
+            <div id="hide">
+            </div>
+            <button id="button-efect-02">&rightarrow;</button>
         </section>
     </main>
     <script src="./js/script.js"></script>
